menu-about-contact

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "next": "15.4.6",
     "react": "19.1.0",
