--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "swiper": "^11.2.10",
     "swr": "^2.3.6"
   },
